# DataCollect

./: .gitignore  3.xlsx  3_example.xlsx  3_old.xlsx  3_test.xlsx  HideThing.bash  all_task.txt  check_target_reached.sh  delete.sh  ego.sh  filter.bash  instruction.txt  new_25.sh  new_all.sh  organize_save_data.sh  organize_save_data_new.sh  perching.sh  process.py  prompts.txt  pub_goal.sh  pub_perching.sh  pub_yaw.sh  readme.md  rebuild_all.sh  record_odom_image.py  record_odom_image_trigger.py  rviz.bash  save.sh  save_perching.sh  save_yaw.sh  send_single_goal.py  simulate.sh  task.txt  tcp.sh
EGO-Planner-v3/: record_cmd_image.py
EGO-Planner-v3/src/planner/mission_fsm/config/: default.rviz
EGO-Planner-v3/src/planner/mission_fsm/include/: rc_fsm.h
EGO-Planner-v3/src/planner/mission_fsm/launch/: advanced_param_sim.xml  multidrone_sim.launch  run_in_sim.xml  simulator.xml
EGO-Planner-v3/src/planner/mission_fsm/src/: mission_node.cpp  rc_fsm.cpp
EGO-Planner-v3/src/utils/cloud_filter/src/: pointcloud_filter_node.cpp  timestamp_converter_node.cpp
Fast-Perching/: YAW_CONFIGURATION.md  YAW_CONFIG_GUIDE.md  frames.gv  test_yaw_config.sh  test_yaw_examples.sh
Fast-Perching/sh_utils/: pub_triger.sh
Fast-Perching/src/apriltag_ros/apriltag_ros/: CMakeLists.txt
Fast-Perching/src/apriltag_ros/apriltag_ros/config/: tags.yaml
Fast-Perching/src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
Fast-Perching/src/planning/: CMakeLists.txt  package.xml
Fast-Perching/src/planning/launch/: perching.launch  perching_unity.launch
Fast-Perching/src/planning/src/: order7_trajectory_server.cpp  planning_nodelet.cpp
lidar_filter/src/livox_radius_filter/: CMakeLists.txt  package.xml
lidar_filter/src/livox_radius_filter/src/: radius_filter_node.cpp
(+18 files in other folders)
