<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.0.0</version>
  <description>The planning package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>traj_opt</depend>
  
  <!-- 消息依赖 -->
  <depend>traj_utils</depend>              <!-- 自定义消息包 -->
  <depend>quadrotor_msgs</depend>          <!-- 位置命令消息 -->
  <depend>nav_msgs</depend>                <!-- 里程计消息 -->
  <depend>std_msgs</depend>                <!-- 标准消息 -->
  <depend>geometry_msgs</depend>           <!-- 几何消息 -->
  
  
  <depend>eigen</depend>                   <!-- Eigen数学库 -->
  <depend>boost</depend>                   <!-- Boost库 -->
  <!-- 构建时依赖 -->
  <build_depend>message_generation</build_depend>
  
  <!-- 运行时依赖 -->
  <exec_depend>message_runtime</exec_depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>

</package>