cmake_minimum_required(VERSION 3.0.2)
project(livox_radius_filter)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  sensor_msgs
  pcl_ros
  pcl_conversions
)

find_package(PCL REQUIRED)

catkin_package(
  CATKIN_DEPENDS roscpp sensor_msgs pcl_ros pcl_conversions
)

include_directories(
  ${catkin_INCLUDE_DIRS}
  ${PCL_INCLUDE_DIRS}
)

add_executable(radius_filter_node src/radius_filter_node.cpp)
target_link_libraries(radius_filter_node ${catkin_LIBRARIES} ${PCL_LIBRARIES})
add_dependencies(radius_filter_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
